--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"node src/server.js\" \"vite\"",
-    "api": "node src/server.js",
-    "vite": "vite",
+    "server": "node src/server.js",
+    "client": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -61,7 +61,10 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
+    "natural": "^6.10.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
