--- a/package.json
+++ b/package.json
@@ -41,18 +41,22 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tanstack/react-query": "^5.75.5",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.508.0",
+    "natural": "^6.10.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.3",
@@ -61,10 +65,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4",
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.1",
-    "natural": "^6.10.4"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
