--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tanstack/react-query": "^5.75.5",
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,6 +53,7 @@
     "lucide-react": "^0.508.0",
     "natural": "^6.10.4",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
