--- a/package.json
+++ b/package.json
@@ -67,7 +67,11 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.17.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
