--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.18.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
@@ -72,6 +74,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
+    "vite": "^5.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -80,8 +83,6 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
@@ -91,7 +92,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^7.0.1",
-    "vite": "^5.1.3"
+    "typescript-eslint": "^7.0.1"
   }
 }
