--- a/package.json
+++ b/package.json
@@ -75,7 +75,10 @@
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "vite": "^5.1.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
@@ -83,14 +86,11 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^13.24.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.1"
   }
