--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.18.1",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
@@ -61,6 +63,7 @@
     "natural": "^6.10.4",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
@@ -71,18 +74,15 @@
     "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "vite": "^5.1.3",
-    "zod": "^3.22.4",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
