--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "embla-carousel-react": "^8.0.0",
+    "express": "^4.18.2",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.330.0",
     "natural": "^6.10.4",
