--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.17.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -60,6 +60,7 @@
     "dotenv": "^16.4.1",
     "embla-carousel-react": "^8.0.0",
     "express": "^4.18.2",
+    "framer-motion": "^12.11.3",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.330.0",
     "natural": "^6.10.4",
