--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0"
@@ -21,4 +22,4 @@
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
