--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express": "^4.18.2",
     "framer-motion": "^12.11.3",
     "input-otp": "^1.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
     "natural": "^6.10.4",
     "next-themes": "^0.2.1",
